--- a/style.css
+++ b/style.css
@@ -52,4 +52,35 @@ body{font-family: 'Poppins', sans-serif;}
     background-color: rgb(244, 239, 239);
 }
 .others{color: rgb(167, 171, 159);
-text-align: center;}
+    text-align: center;}
+.plan{
+    
+    text-align: center;
+}
+.food{
+    background-color: rgb(221, 236, 249);
+    margin: 0 30px
+   background-image: Url(icons/food);
+
+}
+.shelter{
+    background-color: rgb(248, 228, 201);
+    margin: 0 30px
+   
+}
+
+.education{ 
+    background-color: rgb(187, 194, 194);
+    margin: 0 30px
+    
+}
+.section3{
+    display: flex;
+   
+}
+.section3 h1 { 
+    margin: 0 10px;
+}
+.section3 p {
+    margin: 0 10px;
+}
