--- a/style.css
+++ b/style.css
@@ -7,6 +7,9 @@ body{font-family: 'Poppins', sans-serif;}
     background-size: cover;
     background-position: center;
     background-repeat: no-repeat;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 .Button{
   text-decoration: none;
@@ -60,7 +63,7 @@ body{font-family: 'Poppins', sans-serif;}
 .food{
     background-color: rgb(221, 236, 249);
     margin: 0 30px
-   background-image: Url(icons/food);
+   
 
 }
 .shelter{
@@ -84,3 +87,41 @@ body{font-family: 'Poppins', sans-serif;}
 .section3 p {
     margin: 0 10px;
 }
+.updates{
+    text-align: center;
+    justify-content: center;
+
+}
+.sub{
+ 
+    background-color: rgb(218, 176, 183);
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    width: 50%;
+    margin: 0 auto;
+    padding: 50px;
+
+}
+.icon1{margin:left 50px;}
+.foot{
+    text-align: center;
+    justify-content: center;
+    background-color: purple;
+}
+.foot h1{
+  font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;}
+  .serv{
+    display: flex;
+  }
+  .half{
+    width:50%;
+ padding-left: 5px;
+
+  }
+  .half img{
+    width: 90% ;
+  }
+  .the{
+   
+  }
